fix(icon): fix vertical icon alignment
OUI-1485

--- a/projects/oblique/src/styles/scss/themes/material/mat-icon.scss
+++ b/projects/oblique/src/styles/scss/themes/material/mat-icon.scss
@@ -1,18 +1,13 @@
 .mat-icon.ob-icon {
 
-	&,
-	svg {
+	& {
 		width: 1em;
 		height: 1em;
-	}
 
-	svg {
-		vertical-align: middle;
-	}
-
-	&.fa {
-		display: inline-flex;
-		align-items: center;
-		justify-content: center;
+		&:not(.fa) {
+			position: relative;
+			top: 0.15em; // empiric value
+			line-height: 1;
+		}
 	}
 }
